--- a/frontend/src/sass/utils/_custom_classes.scss
+++ b/frontend/src/sass/utils/_custom_classes.scss
@@ -27,6 +27,7 @@
         align-items: center;
         justify-content: center;
         color: inherit;
+        overflow: hidden;
 
         span {
             height: inherit;
@@ -34,6 +35,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
         }
     }
 
@@ -52,6 +54,7 @@
 .button-as-icon {
     @extend .button;
     width: em(40);
+    padding-inline: 0;
 }
 
 .link {
@@ -91,6 +94,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
         }
     }
 
